# desafio-c2s

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
caragent/: agent.py  database.py  settings.py  tui.py
caragent/mcp_server/: __init__.py  server.py  tools.py
tests/: test_car_agent.py
