[project]
name = "desafio-c2s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.4.2",
    "faker-vehicle>=0.2.0",
    "fire>=0.7.0",
    "mcp[cli]>=1.11.0",
    "pytest>=8.4.1",
    "smolagents[gradio,mcp,openai,toolkit]>=1.20.0",
    "sqlalchemy>=2.0.41",
    "textual>=4.0.0",
]
